--- a/whaple-market/src/main/resources/templates/test.html
+++ b/whaple-market/src/main/resources/templates/test.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+HELLO!!!
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
