--- a/whaple-market/src/main/resources/templates/test.html
+++ b/whaple-market/src/main/resources/templates/test.html
@@ -2,13 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Document</title>
 </head>
 <body>
 HELLO!!!
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
+<button id="btn-push" type="button">push</button>
+<script>
+    document.getElementById("btn-push").addEventListener('click', ()=>{
+        const username = Telegram.WebApp.WebAppUser.username;
+        axios({
+            method: 'post',
+            url: 'https://market.iro.ooo/test/btn',
+            data: {
+                "username":username
+            }
+        });
+    })
+</script>
 </body>
 </html>
