--- a/whaple-market/src/main/resources/templates/test.html
+++ b/whaple-market/src/main/resources/templates/test.html
@@ -5,16 +5,20 @@
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Document</title>
 </head>
 <body>
 HELLO!!!
 <button id="btn-push" type="button">push</button>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script>
     document.getElementById("btn-push").addEventListener('click', ()=>{
-        const username = window.Telegram.WebApp.WebAppUser.username;
+        const username = window.Telegram.WebApp;
+        console.log(window.Telegram.WebApp)
+        console.log(window.Telegram.WebApp.WebAppInitData)
+        console.log(window.Telegram.WebApp.WebAppInitData.WebAppUser)
+        console.log(window.Telegram.WebApp.WebAppInitData.WebAppUser.username)
         axios({
             method: 'post',
             url: 'https://market.iro.ooo/test/btn',
