--- a/whaple-market/src/main/resources/templates/test.html
+++ b/whaple-market/src/main/resources/templates/test.html
@@ -14,11 +14,11 @@ HELLO!!!
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script>
     document.getElementById("btn-push").addEventListener('click', ()=>{
-        const username = window.Telegram.WebApp;
         console.log(window.Telegram.WebApp)
         console.log(window.Telegram.WebApp.WebAppInitData)
         console.log(window.Telegram.WebApp.WebAppInitData.WebAppUser)
         console.log(window.Telegram.WebApp.WebAppInitData.WebAppUser.username)
+        const username = window.Telegram.WebApp.WebAppInitData.WebAppUser.username;
         axios({
             method: 'post',
             url: 'https://market.iro.ooo/test/btn',
