--- a/whaple-market/src/main/resources/templates/test.html
+++ b/whaple-market/src/main/resources/templates/test.html
@@ -17,6 +17,7 @@ HELLO!!!
         console.log(window.Telegram.WebApp.initDataUnsafe.user.id)
         const userId = window.Telegram.WebApp.initDataUnsafe.user.id;
         const hash = window.Telegram.WebApp.initDataUnsafe.hash;
+        console.log(window.Telegram.WebApp.initData)
         axios({
             method: 'post',
             url: 'https://market.iro.ooo/test/btn',
