--- a/whaple-market/src/main/resources/templates/test.html
+++ b/whaple-market/src/main/resources/templates/test.html
@@ -20,7 +20,7 @@ HELLO!!!
         console.log(window.Telegram.WebApp.initData)
         axios({
             method: 'post',
-            url: 'http://localhost:8080/test/btn',
+            url: 'https://market.iro.ooo/test/btn',
             data: {
                 "token":window.Telegram.WebApp.initData,
                 "userId":userId,
