--- a/whaple-market/src/main/resources/templates/test.html
+++ b/whaple-market/src/main/resources/templates/test.html
@@ -14,17 +14,12 @@ HELLO!!!
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script>
     document.getElementById("btn-push").addEventListener('click', ()=>{
-        console.log(window.Telegram.WebApp.initDataUnsafe.user.id)
         const userId = window.Telegram.WebApp.initDataUnsafe.user.id;
-        const hash = window.Telegram.WebApp.initDataUnsafe.hash;
-        console.log(window.Telegram.WebApp.initData)
         axios({
             method: 'post',
             url: 'https://market.iro.ooo/test/btn',
             data: {
-                "token":window.Telegram.WebApp.initData,
-                "userId":userId,
-                "hash":hash
+                "initData" : window.Telegram.WebApp.initData,
             }
         });
     })
