--- a/whaple-market/src/main/resources/templates/index.html
+++ b/whaple-market/src/main/resources/templates/index.html
@@ -14,10 +14,11 @@ HELLO!!!
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script>
     document.getElementById("btn-push").addEventListener('click', ()=>{
-        axios.post('https://market.iro.ooo/test/btn',{
+        axios.post('http://49.142.105.90:9944/valid',{
             "initData" : window.Telegram.WebApp.initData
         })
         .then(response =>{
+            console.log(response);
         })
         .catch(error =>{
         })
